# KodoTerm

./: .gitignore  CMakeLists.txt  Info.plist  KodoTerm.cpp  KodoTermThemes.qrc  README.md  generate_qrc.py  main.cpp  themes.qrc  todo.txt
.github/workflows/: build.yml
examples/: CMakeLists.txt  main.cpp
examples/KodoTermQML/: README.md  main.cpp  main.qml  qml.qrc
examples/simple/: main.cpp
examples/tabbed/: AppConfig.cpp  AppConfig.h  ConfigDialog.cpp  ConfigDialog.h  KodoShell.rc  TabbedTerminal.cpp  TabbedTerminal.h  main.cpp
include/KodoTerm/: KodoQuickTerm.hpp  KodoTerm.hpp  KodoTermConfig.hpp  KodoTermRenderer.hpp  KodoTermSession.hpp
src/: CodoTerm.cpp  KodoQuickTerm.cpp  KodoTerm.cpp  KodoTermConfig.cpp  KodoTermRenderer.cpp  KodoTermSession.cpp  PtyProcess.cpp  PtyProcess.h  PtyProcess_unix.cpp  PtyProcess_unix.h  PtyProcess_win.cpp  PtyProcess_win.h
